--- a/css/style.css
+++ b/css/style.css
@@ -219,14 +219,15 @@ h1, h2 {
 }
 
 .catalog-hits-item {
-    float: left;
+    display: inline-block;
+    vertical-align: top;
     min-height: 280px;
     width: 200px;
-    margin: 0 20px 40px 0;
+    margin: 0 15px 40px 0;
 }
 
 .catalog-hits-item:nth-child(4n) {
-    margin-right: 0;
+    margin-right: 0px;
 }
 
 .pagination {
