--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,11 @@ body {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     line-height: 22px;
-    color: #000;
+    color: #fff;
     font-weight: normal;
+    min-width: 900px;
+
+    background-color: #849d8f;
 }
 
 h1, h2 {
@@ -19,6 +22,7 @@ h1, h2 {
 }
 
 .main-header {
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 
@@ -32,26 +36,219 @@ h1, h2 {
 
 .logo {
     float: left;
-    width: 175px;
-    margin-right: 5px;
+    width: 160px;
 
     outline: lightgreen solid 1px;
 }
 
-/*index page*/
 .main-navigation {
     float: left;
-    width: 410px;
+    width: 430px;
     margin-right: 5px;
-
     outline: lightgreen solid 1px;
+}
+
+a:hover + .sub-menu {
+    display: block;
+}
+
+.main-menu {
+    list-style: none;
+    font-size: 0;
+    margin: 0;
+    padding: 0;
+}
+
+.main-menu li {
+    display: inline-block;
+    position: relative;
+}
+
+.main-menu a {
+    display: block;
+    padding: 0px 0px 1px 0px;
+    margin: 20px 14px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 18px;
+    text-decoration: none;
+    color: #fff;
+    border-bottom: 1px solid #a9bbb1;
+}
+
+.main-menu > li > a:hover {
+    color: #000;
+    background-color: #f7f6f3;
+    padding: 10px 14px;
+    margin: 10px 0px;
+    border-radius: 20px;
+}
+
+.sub-menu {
+    position: absolute;
+    display: none;
+    left: -10px;
+    padding: 0;
+    top: 52px;
+    width: 140px;
+    background-color: #f8f7f4;
+    border-radius: 5px;
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.6);
+    color: #323232;
+    z-index: 10;
+}
+
+.sub-menu li {
+    padding: 0;
+    margin: 0;
+    display: block;
+}
+
+.sub-menu li:first-child {
+    border-bottom: 1px solid #d1d0ce;
+    display: block;
+    margin-left: 6px;
+    margin-right: 8px;
+    margin-top: 0;
+    padding-bottom: 4px;
+    padding-left: 16px;
+    padding-top: 11px;
+}
+
+.sub-menu-title {
+    color: #000;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 700;
+}
+
+.sub-menu a {
+    border: 0 none;
+    display: block;
+    color: #323232;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    margin: 0;
+    padding: 10px 0px 0px 20px;
+    min-height: 28px;
+}
+
+.sub-menu a:hover {
+    background-color: #fbded7;
+    border-radius: 0;
+    color: #323232;
+}
+
+.sub-menu .active {
+    background-color: #d07058;
+    display: block;
+    margin: 0;
+    padding-top: 10px;
+    padding-left: 20px;
+    color: #323232;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    min-height: 28px;
 }
 
 .user-block {
     float: left;
     width: 265px;
-    
     outline: lightgreen solid 1px;
+}
+
+.user-block-search,
+.user-block-login,
+.user-block-cart {
+    display: inline-block;
+    vertical-align: bottom;
+}
+
+.user-block-btn {
+    text-decoration: none;
+    background-color: #abc2b5;
+    color: #fff;
+    display: inline-block;
+    border-radius: 16px;
+    position: relative;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.user-block-btn:hover {
+    background-color: #f8f7f4;
+    color: #323232;
+}
+
+.btn-search {
+    font-size: 0;
+    width: 32px;
+    height: 32px;
+    margin-right: 10px;    
+}
+
+.btn-search::before {
+    width: 17px;
+    height: 17px;
+    content: "";
+    display: block;
+    background-image: url("../img/spritesheet.png");
+    background-position: -123px -86px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+}
+
+.btn-search:hover::before {
+    background-position: -123px -113px;
+}
+
+.btn-login {
+    margin-top: 10px;
+    margin-right: 10px;
+    padding: 8px 20px 8px 45px;
+}
+
+.btn-login::before {
+    width: 21px;
+    height: 19px;
+    display: block;
+    content: "";
+    background-image: url("../img/spritesheet.png");
+    background-position: -125px -5px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 7px;
+    left: 16px;
+}
+
+.btn-login:hover::before {
+    background-position: -125px -34px;
+}
+
+.btn-cart {
+    margin-top: 10px;
+    padding: 8px 25px 8px 45px;
+}
+
+.btn-cart::before {
+    width: 21px;
+    height: 20px;
+    display: block;
+    content: "";
+    background-image: url("../img/spritesheet.png");
+    background-position: -5px -5px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 7px;
+    left: 15px;
+}
+
+.btn-cart:hover::before {
+    background-position: -36px -5px;
 }
 
 .work-info {
@@ -61,6 +258,19 @@ h1, h2 {
     outline: lightgreen solid 1px;
 }
 
+.work-info > div:first-child {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 700;
+}
+
+.work-info > div:last-child {
+    font-size: 22px;
+    line-height: 24px;
+    font-weight: 700;
+}
+
+/*index page*/
 .main-banners {
     margin-bottom: 40px;
 }
@@ -71,7 +281,9 @@ h1, h2 {
     margin-right: 20px;
     width: 400px;
     min-height: 230px;
-
+    position: relative;
+    background-position: 0 0;
+    background-repeat: no-repeat;
     outline: lightgreen solid 1px;
 }
 
@@ -79,8 +291,64 @@ h1, h2 {
     margin-right: 0;
 }
 
+/*Q: is it best to use more specific (".info-teaser > h2" instead of ".info-teaser h2")*/
+.info-teaser > h2 {
+    font-size: 35px;
+    line-height: 41px;
+    font-weight: 700;
+}
+
+.info-teaser > p {
+    font-size: 22px;
+    line-height: 18px;
+    font-weight: 700;
+}
+
+.btn {
+    text-align: center;
+    background-image: linear-gradient(#e84c36, #f16743);
+    /*background-image: linear-gradient(#e74a35, #f26843);*/
+    border-radius: 30px;
+    box-shadow: 0 2px 2px 0 #ac1000;
+}
+
+.btn:hover {
+    background-color: inherit;
+    background-image: linear-gradient(#f58669, #ec6f5e);
+    box-shadow: 0 1px 2px 0 #ac1000;
+    /*background-image: linear-gradient(#ec6f5e, #f58669);
+    box-shadow: 0 2px 2px 0 #ac1000;*/
+}
+
+.info-teaser-btn {
+    /*
+    Q: why this adds paddings/margins?
+    display: block;
+    float: right;
+    */
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    min-height: 24px;
+    padding: 10px 24px 10px 22px;
+
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
+.info-raspberry {
+    background-image: url("../img/adv-raspberry.png");
+}
+
+.info-chocolate {
+    background-image: url("../img/adv-chocolate.png");
+}
+
 .main-hits {
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
+
+    outline: lightgreen solid 1px;
 }
 
 .main-hits-item {
@@ -88,8 +356,107 @@ h1, h2 {
     width: 200px;
     min-height: 230px;
     margin-right: 20px;
+    /*margin-bottom: 40px;*/
+    position: relative;
 
     outline: lightgreen solid 1px;
+}
+
+.main-hits-item > img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+}
+
+.main-hits-item::before {
+    background-image: url("../img/hit.png");
+    content: "";
+    height: 61px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 61px;
+}
+
+
+.main-hits-item-hover {
+   display: none;
+}
+
+.main-hits-item:hover .main-hits-item-hover {
+    display: block;
+    background-color: rgba(248, 247, 244, 0.3);
+    border-radius: 5px;
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.15);
+    height: 110%;
+    position: absolute;
+    left: -10px;
+    top: -1%;
+    width: 220px;
+}
+/*
+.main-hits-item:hover::after {
+    background-color: rgba(248, 247, 244, 0.3);
+    /*background-color: rgba(171, 188, 179, 0.3);* /
+    border-radius: 5px;
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.15);
+    content: "";
+    display: block;
+    height: 102%;
+    position: absolute;
+    left: -10px;
+    top: -1%;
+    width: 220px;
+    /*WTF??* /
+    z-index: -1;
+}
+*/
+.hits-item-price {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 45px;
+    position: relative;
+    top: -65px;
+}
+
+.hits-item-price > img {
+    width: 31px;
+    height: 33px;
+}
+
+.hits-item-price > span {
+    font-size: 45px;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.hits-item-link-wrapper {
+    position: relative;
+    text-align: center;
+    top: -45px;
+}
+
+.hits-item-link-wrapper > a {
+    line-height: 22px;
+    border-bottom: 1px solid #a9bbb1;
+    color: white;
+    font-size: 16px;
+    line-height: 18px;
+    text-decoration: none;
+}
+
+.hits-btn-hover {
+    display: inline-block;
+    font-size: 18px;
+    line-height: 24px;
+    min-height: 34px;
+    width: 180px;
+    text-decoration: none;
+    vertical-align: center;
+    color: #fff;
+    position: absolute;
+    bottom: 15px;
+    padding-top: 10px;
+    left: 20px;
 }
 
 .main-hits-item:last-child {
@@ -97,19 +464,29 @@ h1, h2 {
 }
 
 .main-content {
-    padding: 15px 20px;
+    background-image: url("../img/waffle-bg.png");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    padding: 15px 0 15px 20px;
     margin-bottom: 40px;
+    color: #323232;
     outline: lightgreen solid 1px;
+}
+
+.main-content-title {
+    font-size: 24px;
+    line-height: 30px;
+    margin: 0 0 5px 0;
 }
 
 .main-content-item {
     float: left;
-    width: 400px;
+    width: 340px;
     min-height: 120px;
-    padding-top: 10px;
-    margin-right: 20px;
-    margin-bottom: 15px;
-
+    padding-left: 70px;
+    padding-top: 12px;
+    position: relative;
+    margin: 0px;
     outline: lightgreen solid 1px;
 }
 
@@ -117,49 +494,314 @@ h1, h2 {
     margin-right: 0;
 }
 
+.main-content-item-ingredients::before {
+    background-image: url("../img/spritesheet.png");
+    background-position: -64px -64px;
+    background-repeat: no-repeat;
+    content: "";
+    width: 49px;
+    height: 49px;
+    top: 0;
+    left: 0;
+    display: block;
+    position: absolute;
+}
+
+.main-content-item-ice-cream::before {
+    background-image: url("../img/spritesheet.png");
+    background-position: -5px -64px;
+    background-repeat: no-repeat;
+    content: "";
+    width: 49px;
+    height: 49px;
+    top: 0;
+    left: 0px;
+    display: block;
+    position: absolute;
+}
+
+.main-content-item-pack::before {
+    background-image: url("../img/spritesheet.png");
+    background-position: -156px -5px;
+    background-repeat: no-repeat;
+    content: "";
+    width: 49px;
+    height: 49px;
+    top: 0;
+    left: 0;
+    display: block;
+    position: absolute;
+}
+
+.main-content-item-purchase::before {
+    background-image: url("../img/spritesheet.png");
+    background-position: -67px -5px;
+    background-repeat: no-repeat;
+    content: "";
+    width: 49px;
+    height: 49px;
+    top: 0;
+    left: 0;
+    display: block;
+    position: absolute;
+}
+
 .main-news {
     margin-bottom: 40px;
+}
+
+.newpost {
+    background-image: url("../img/blog-news-bg.png");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    min-height: 220px;
+}
+
+.newpost > h2 {
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: normal;
+    color: #5a5a5a;
+}
+
+.newpost > a {
+    color: #353535;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 30px;
+    background: rgba(255, 255, 255, 0.4);
+}
+
+.newsletter {
+    background-image: url("../img/newsletter-bg.png");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    min-height: 220px;
+    width: 420px;
+    padding: 0px;
+}
+
+.newsletter > p {
+    color: #5a5a5a;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px; 
+}
+
+.newsletter-bg {
+    background-color: #f8f7f4;
+    padding: 20px 18px;
+    margin: 5px;
+    color: #5a5a5a;
+    border-radius: 20px;
+}
+
+.newsletter-bg > p {
+    margin-bottom: 18px;
+}
+
+.newsletter input {
+    width: 228px;
+    height: 42px;
+    display: inline-block;
+    vertical-align: bottom;
+}
+
+.newsletter .info-teaser-btn {
+    display: inline-block;
+    vertical-align: bottom;
+    width: 128px;
+    position: static;
+    color: #fefefe;
+    padding: 10px 15px;
 }
 
 .map {
     width: 900px;
     margin: 0 auto;
     padding: 0;
-    
+    position: relative;
     outline: red solid 1px;
 }
 
+.map-info {
+    background-color: #fdfefe;
+    border-radius: 10px;
+    min-height: 300px;
+    padding-left: 25px;
+    padding-top: 30px;
+    position: absolute;
+    right: 20px;
+    top: 63px;
+    width: 277px;
+    color: #323232;
+}
+
+.map-info p {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 30px;
+}
+
+.map-info b {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+}
+
+.map-info .btn {
+    text-decoration: none;
+    color: #f9d3cb;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    min-height: 44px;
+    padding: 15px 24px 15px 32px;
+}
+
+
+/*footer*/
 .main-footer {
-    margin-top: 20px;
+    margin-top: 35px;
     margin-bottom: 25px;
 }
-.main-footer-social{
+.main-footer-social {
     float: left;
-    width: 200px;
-    margin-right: 20px;
+    width: 193;
+    margin-right: 50px;
 
     outline: lightgreen solid 1px;
+}
+
+.social-btn {
+    border: 4px solid #c2cec7;/*rgba(194, 206, 199, 1);*/
+    border-radius: 50%;
+    display: inline-block;
+    font-size: 0;
+    height: 32px;
+    margin-right: 7px;
+    opacity: 0.8;
+    vertical-align: bottom;
+    width: 32px;
+    position: relative;
+}
+
+.social-btn:last-child{
+    margin-right: 0;
+}
+
+.social-btn:hover {
+    opacity: 1;
+}
+
+.social-btn-twitter::before {
+    background-image: url("../img/social.png");
+    background-position: -5px -47px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 32px;
+    height: 32px;
+}
+
+.social-btn-instagram::before {
+    background-image: url("../img/social.png");
+    background-position: -47px -5px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 32px;
+    height: 32px;
+}
+
+.social-btn-facebook::before {
+    background-image: url("../img/social.png");
+    background-position: -5px -5px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 32px;
+    height: 32px;
+}
+
+.social-btn-vkontakte::before {
+    background-image: url("../img/social.png");
+    background-position: -48px -47px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 32px;
+    height: 32px;
 }
 
 .main-footer-about {
     float: left;
-    width: 180px;
-    margin-right: 20px;
+    width: 140px;
+    margin-right: 30px;
 
     outline: lightgreen solid 1px;
 }
 
+.main-footer-about > a,
+.main-footer-documents > a,
+.main-footer-copyright a {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    padding: 0;
+    margin-bottom: 0px;
+    border-bottom: 1px solid #abbcb3;
+    font-size: 13px;
+    line-height: 18px;
+}
+
+.main-footer-about > a {
+    margin-left: 20px;
+}
+
+.main-footer-about > a:hover,
+.main-footer-documents > a:hover,
+.main-footer-copyright a:hover {
+    color: #ffbc9e;
+    border-bottom: 1px solid #ffbc9e;
+}
+
+.main-footer-about > a.provider {
+    font-weight: 700;
+    position: relative;
+}
+
+.main-footer-about > a.provider::before {
+    background-image: url("../img/spritesheet.png");
+    background-position: -125px -63px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 2px;
+    left: -20px;
+    content: "";
+    width: 15px;
+    height: 13px;
+}
+
 .main-footer-documents {
     float: left;
-    width: 220px;
-    margin-right: 20px;
+    width: 170px;
+    margin-right: 45px;
 
     outline: lightgreen solid 1px;
 }
 
 .main-footer-copyright {
     float: left;
-    width: 200px;
+    width: 230px;
 
     outline: lightgreen solid 1px;
 }
@@ -227,7 +869,7 @@ h1, h2 {
 }
 
 .catalog-hits-item:nth-child(4n) {
-    margin-right: 0px;
+    margin-right: 0;
 }
 
 .pagination {
