--- a/css/style.css
+++ b/css/style.css
@@ -819,7 +819,7 @@ a:hover + .sub-menu {
 Q: Why there is "padding-left" 
 */
 .social-btn-twitter::before {
-    background-image: url("../img/social.png");
+    background-image: url("../img/socialsprite.png");
     background-position: -5px -47px;
     background-repeat: no-repeat;
     position: absolute;
@@ -831,7 +831,7 @@ Q: Why there is "padding-left"
 }
 
 .social-btn-instagram::before {
-    background-image: url("../img/social.png");
+    background-image: url("../img/socialsprite.png");
     background-position: -47px -5px;
     background-repeat: no-repeat;
     position: absolute;
@@ -843,7 +843,7 @@ Q: Why there is "padding-left"
 }
 
 .social-btn-facebook::before {
-    background-image: url("../img/social.png");
+    background-image: url("../img/socialsprite.png");
     background-position: -5px -5px;
     background-repeat: no-repeat;
     position: absolute;
@@ -855,7 +855,7 @@ Q: Why there is "padding-left"
 }
 
 .social-btn-vkontakte::before {
-    background-image: url("../img/social.png");
+    background-image: url("../img/socialsprite.png");
     background-position: -48px -47px;
     background-repeat: no-repeat;
     position: absolute;
@@ -970,47 +970,249 @@ Q: Why there is "padding-left"
     margin-right: 4px;
 }
 
+/*Filter*/
+
 .filter-form {
-    margin-bottom: 30px;
+    color: #fff;
+}
+
+.filter-form > fieldset {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.filter-item {
+    margin: 0 15px 12px 0;
+    padding: 0;
+    border: none;
 }
 
 .filter-group-sort {
-    float: left;
     width: 195px;
-    margin-right: 10px;
-    margin-left: 0;
-    padding: 0 0;
-
-    outline: lightgreen solid 1px;
 }
 
-.filter-group-range {
-    float: left;
-    width: 220px;
-    margin-right: 10px;
-    margin-left: 0;
-    padding: 0 0;
-
-    outline: lightgreen solid 1px;
+.filter-title {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    margin: 10px 15px 7px;
 }
 
-.filter-group-fatness {
-    float: left;
-    width: 410px;
-    margin: 0 0;
-    padding: 0 0;
-
-    outline: lightgreen solid 1px;
+.filter-select-field {
+    background-color: #9db1a5;
+    border-radius: 30px;
+    cursor: pointer;
+    font-weight: 500;
+    height: 36px;
+    position: relative;
 }
 
-.filter-group-filler {
-    float: left;
+.filter-select {
+    -moz-appearance: none;
+    background-color: transparent;
+    border: 0 none;
+    border-radius: 30px;
+    cursor: pointer;
+    height: 36px;
+    margin: 0;
+    outline: 0 none;
+    padding: 0 25px 0 10px;
+    width: 100%;
+    position: relative;
+    color: #fff;
 }
 
-.filter-group-btnsubmit {
+.filter-select-field:focus,
+.filter-select-field:hover,
+.filter-select:hover,
+.filter-select:active,
+.filter-select:focus {
+    background-color: #fff;
+    color: #323232;
+}
+
+.filter-select-arrow::after {
+    position: absolute;
+    content: "";
+    top: 15px;
+    right: 15px;
+    background-image: url("../img/filtersprite.png");
+    background-position: -126px -5px;
+    background-repeat: no-repeat;
+    width: 9px;
+    height: 5px;
+    display: block;
+}
+
+.filter-select:hover + .filter-select-arrow::after,
+.filter-select:active + .filter-select-arrow::after,
+.filter-select:focus + .filter-select-arrow::after {
+    background-image: url("../img/filtersprite.png");
+    background-position: -126px -20px;
+}
+
+.filter-radio-field,
+.filter-checkbox-field {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 30px;
+    box-sizing: border-box;
+    font-weight: 500;
+    line-height: 16px;
+    font-size: 14px;
+    padding: 10px 15px;
+}
+
+.filter-radio,
+.filter-checkbox {
+    cursor: pointer;
+    padding-left: 30px;
+    margin-right: 15px;
+    position: relative;
+}
+
+.filter-radio > input[type="radio"],
+.filter-checkbox > input[type="checkbox"] {
+    display: none;
+}
+
+.filter-checkbox > input[type="checkbox"] + .filter-checkbox-indicator {
+    background-image: url("../img/filtersprite.png");
+    background-position: -35px -35px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+}
+
+.filter-checkbox > input[type="checkbox"]:checked + .filter-checkbox-indicator {
+    background-position: -5px -5px;
+}
+
+.filter-checkbox:hover > input[type="checkbox"] + .filter-checkbox-indicator {
+    background-position: -65px -35px;
+}
+
+.filter-checkbox:hover > input[type="checkbox"]:checked + .filter-checkbox-indicator {
+    background-position: -35px -5px;
+}
+
+.filter-checkbox > input[type="checkbox"]:checked:disabled + .filter-checkbox-indicator {
+    background-position: -65px -5px;
+}
+
+.filter-checkbox > input[type="checkbox"]:disabled + .filter-checkbox-indicator {
+    background-position: -5px -35px;
+}
+
+.filter-radio > input[type="radio"] + .filter-radio-indicator {
+    background-image: url("../img/filtersprite.png");
+    background-position: -98px -37px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 21px;
+    height: 22px;
+}
+
+.filter-radio > input[type="radio"]:checked + .filter-radio-indicator {
+    background-position: -5px -65px;
+}
+
+.filter-radio:hover > input[type="radio"] + .filter-radio-indicator {
+    background-position: -98px -69px;
+}
+
+.filter-radio:hover > input[type="radio"]:checked + .filter-radio-indicator {
+    background-position: -36px -65px;
+}
+
+.filter-radio > input[type="radio"]:checked:disabled + .filter-radio-indicator {
+    background-position: -67px -65px;
+}
+
+.filter-radio > input[type="radio"]:disabled + .filter-radio-indicator {
+    background-position: -95px -5px;
+}
+
+.filter-btnsubmit {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 30px;
+    border: 2px solid #fff;
+    color: #fff;
+    margin: 30px 0 0 0;
+    padding: 8px 26px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 18px;
+    cursor: pointer;
+}
+
+.filter-btnsubmit:hover {
+    background-color: #fff;
+    color: #353535;
+}
+
+.filter-btnsubmit:active {
+  margin: -2px 0 0 -2px;
+  padding: 10px 28px;
+  background-color: #f8f7f4;
+  color: #353535;
+  box-shadow: inset 0 2px 1px 0 #696969;
+}
+
+.filter-range-field {
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 30px;
+    font-weight: 500;
+    height: 7px;
+    padding: 15px;
+}
+
+.price-controls-scale {
+    background-color: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+    height: 4px;
+}
+
+.price-controls-bar {
+    margin-left: 25%;
+    margin-right: 15%;
+    background-color: #fff;
+    height: 4px;
+    position: relative;
+}
+
+.price-controls-btn {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+    cursor: pointer;
     display: inline-block;
-    vertical-align: middle;
+    position: absolute;
+    top: -9px;    
 }
+
+.price-controls-btn:hover {
+    width: 22px;
+    height: 22px;
+}
+
+.price-controls-min {
+    left: 0;
+}
+
+.price-controls-max {
+    right: 0;
+}
+
+
+/*Filter*/
 
 .catalog-list {
     margin-bottom: 85px;
