--- a/css/style.css
+++ b/css/style.css
@@ -937,6 +937,107 @@ Menu forms
     padding: 15px 24px 15px 32px;
 }
 
+/*
+feedback
+*/
+
+.feedback-overlay {
+    display: none;
+}
+
+.feedback-overlay-show {
+    background-color: #000;
+    height: 100%;
+    left: 0;
+    opacity: 0.3;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 50;
+    display: block;
+}
+
+.feedback-form {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+
+    width: 435px;
+    padding: 20px 25px 25px 20px;
+    border-radius: 10px;
+
+    background-color: #f8f7f4;
+    
+    
+    position: fixed;
+    top: 50%;
+    left: 50%;
+
+    transform: translateX(-50%) translateY(-50%);
+
+    z-index: 100;
+    display: none; 
+}
+
+.feedback-form-show {
+    animation: 0.6s ease 0s normal none 1 running bounce;
+    display: block;
+}
+
+.feedback-form .title {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    color: #323232;
+}
+
+.feedback-form input[type="text"],
+.feedback-form input[type="email"],
+.feedback-form textarea {
+    margin: 22px 0;
+    display: block;
+    width: 264px;
+}
+
+.feedback-form textarea {
+    width: 420px;
+}
+
+.feedback-form .btn {
+    border: none;
+    float: right;
+    margin:0;
+}
+
+.feedback-close {
+    border: none;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+}
+
+.feedback-close::before {
+    content: "\00d7";
+    position: absolute;
+    display: block;
+    font-size: 40px;
+    top: -10px;
+    left: 0;
+}
+
+.feedback-close:hover {
+    cursor: pointer;
+}
+/*
+feedback
+*/
+
 
 /*footer*/
 .main-footer {
