--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto", "Arial",  sans-serif;
     font-size: 16px;
     line-height: 22px;
     color: #fff;
