--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,10 @@ input[type="password"]:focus, textarea:focus {
 
 .slider {
     position: relative;
-    padding-top: 270px;
+    padding-top: 255px;
     text-align: center;
     color: #fff;
-    margin-bottom: 35px;
+    margin-bottom: 40px;
 }
 
 .slide {
@@ -117,7 +117,7 @@ input[type="password"]:focus, textarea:focus {
 
 .slide-btn {
     display: inline-block;
-    padding: 12px 50px;
+    padding: 10px 40px;
 
     font-weight: 600;
     font-size: 32px;
@@ -196,23 +196,30 @@ input[type="password"]:focus, textarea:focus {
 .main-header {
     padding-top: 10px;
     margin-bottom: 20px;
+
+    outline: 1px solid lightgreen;
 }
 
 .container {
-    width: 860px;
+    width: 870px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 15px;
+
+    outline: 1px solid red;
 }
 
 .logo {
     float: left;
-    width: 160px;
+    width: 170px;
+
+    outline: 1px solid lightgreen;
 }
 
 .main-navigation {
     float: left;
-    width: 430px;
-    margin-right: 5px;
+    width: 420px;
+
+    outline: 1px solid lightyellow;
 }
 
 li:hover .sub-menu {
@@ -230,12 +237,14 @@ li:hover .sub-menu {
     display: inline-block;
     position: relative;
     vertical-align: top;
+    margin: 13px 2px 0px 2px;
+
+    outline: 1px solid yellow;
 }
 
 .main-menu a {
     display: block;
-    padding: 0px 0px 1px 0px;
-    margin: 20px 14px;
+    padding: 7px 12px 1px 12px;;
     font-weight: 700;
     font-size: 16px;
     line-height: 18px;
@@ -248,8 +257,7 @@ li:hover .sub-menu {
 .main-menu > li > .active  {
     color: #000;
     background-color: #f7f6f3;
-    padding: 10px 14px;
-    margin: 10px 0px;
+    padding-bottom: 7px;
     border-radius: 20px;
 }
 
@@ -330,6 +338,9 @@ li:hover .sub-menu {
 .user-block {
     float: left;
     width: 265px;
+    padding-left: 15px;
+
+    outline: 1px solid lightblue;
 }
 
 .user-block-search,
@@ -339,6 +350,9 @@ li:hover .sub-menu {
     vertical-align: top;
     position: relative;
     padding-bottom: 10px;
+    padding-top: 5px;
+
+    outline: 1px solid blue;
 }
 
 .user-block-btn {
@@ -363,7 +377,7 @@ li:hover .sub-menu {
     font-size: 0;
     width: 32px;
     height: 32px;
-    margin-right: 10px;    
+    display: inline-block;
 }
 
 .btn-search::before {
@@ -383,10 +397,13 @@ li:hover .sub-menu {
     background-position: -123px -113px;
 }
 
+.user-block-login {
+    margin-left: 7px;
+}
+
 .btn-login {
     margin-top: 10px;
-    margin-right: 10px;
-    padding: 8px 20px 8px 45px;
+    padding: 8px 15px 8px 43px;
 }
 
 .btn-login::before {
@@ -398,7 +415,7 @@ li:hover .sub-menu {
     background-position: -125px -5px;
     background-repeat: no-repeat;
     position: absolute;
-    top: 7px;
+    top: 6px;
     left: 16px;
 }
 
@@ -406,9 +423,13 @@ li:hover .sub-menu {
     background-position: -125px -34px;
 }
 
+.user-block-cart {
+    margin-left: 7px;
+}
+
 .btn-cart {
     margin-top: 10px;
-    padding: 8px 24px 8px 45px;
+    padding: 8px 35px 8px 45px;
 }
 
 .btn-cart::before {
@@ -420,8 +441,8 @@ li:hover .sub-menu {
     background-position: -5px -5px;
     background-repeat: no-repeat;
     position: absolute;
-    top: 7px;
-    left: 15px;
+    top: 6px;
+    left: 17px;
 }
 
 .user-block-cart:hover > .btn-cart::before {
@@ -580,23 +601,36 @@ Menu forms
     float: right;
     width: 200px;
     text-align: right;
+    margin-top: 7px;
+}
+
+.work-info.catalog-work-info {
+    margin-top: 0;
 }
 
 .work-info > div:first-child {
     font-size: 14px;
     line-height: 16px;
     font-weight: 700;
+    margin-right: 4px;
 }
 
 .work-info > div:last-child {
     font-size: 22px;
     line-height: 24px;
     font-weight: 700;
+    margin-right: 3px;
+    margin-top: 5px;
+}
+
+.container.main-container {
+    width: 860px;
+    padding: 0 20px;
 }
 
 /*index page*/
 .main-banners {
-    margin-bottom: 40px;
+    margin-bottom: 35px;
 }
 
 .info-teaser {
@@ -606,6 +640,7 @@ Menu forms
     width: 380px;
     background-position: 0 0;
     background-repeat: no-repeat;
+    min-height: 200px;
 }
 
 .info-teaser:last-child {
@@ -616,7 +651,7 @@ Menu forms
     font-size: 35px;
     line-height: 41px;
     font-weight: 700;
-    margin: 0 0 25px 0;
+    margin: 0 0 15px 0;
 }
 
 .info-teaser > p {
@@ -651,7 +686,7 @@ Menu forms
     font-size: 18px;
     font-weight: 700;
     line-height: 24px;
-    padding: 10px 15px;
+    padding: 11px 22px;
 }
 
 .info-raspberry {
@@ -678,6 +713,7 @@ Menu forms
     margin: 0;
     padding: 0;
     position: relative;
+    margin-bottom: 7px;
 }
 
 .hits-item-inner > img {
@@ -706,7 +742,7 @@ Menu forms
     background-color: rgba(248, 247, 244, 0.3);
     border-radius: 5px;
     box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.15);
-    height: 120%;
+    height: 125%;
     position: absolute;
     left: -10px;
     top: -1%;
@@ -719,7 +755,7 @@ Menu forms
     font-weight: 700;
     line-height: 45px;
     position: absolute;
-    bottom: 20px;
+    bottom: 15px;
     left: 0;
 }
 
@@ -735,6 +771,7 @@ Menu forms
 
 .hits-item-link-wrapper {
     text-align: center;
+    padding: 0 8px;
 }
 
 .hits-item-link-wrapper > a {
@@ -769,7 +806,7 @@ Menu forms
     background-image: url("../img/waffle-bg.png");
     background-position: 0 0;
     border-radius: 15px;
-    padding: 15px 0 15px 20px;
+    padding: 21px 0 20px 20px;
     margin-bottom: 40px;
     color: #323232;
 }
@@ -777,22 +814,22 @@ Menu forms
 .main-content-title {
     font-size: 24px;
     line-height: 30px;
-    margin: 0 0 5px 0;
+    margin: 0px 0 6px 0;
 }
 
 .main-content-item {
     display: inline-block;
     vertical-align: top;
-    width: 340px;
-    min-height: 120px;
-    padding-left: 70px;
-    padding-top: 12px;
+    width: 345px;
+    padding-left: 58px;
+    padding-top: 17px;
+    padding-bottom: 5px;
     position: relative;
     margin: 0px;
 }
 
 .main-content-item:nth-child(2n) {
-    margin-right: 0;
+    margin-right: 15px;
 }
 
 .main-content-item-ingredients::before {
@@ -802,7 +839,7 @@ Menu forms
     content: "";
     width: 49px;
     height: 49px;
-    top: 0;
+    top: 4px;
     left: 0;
     display: block;
     position: absolute;
@@ -815,7 +852,7 @@ Menu forms
     content: "";
     width: 49px;
     height: 49px;
-    top: 0;
+    top: 4px;
     left: 0px;
     display: block;
     position: absolute;
@@ -828,7 +865,7 @@ Menu forms
     content: "";
     width: 49px;
     height: 49px;
-    top: 0;
+    top: 4px;
     left: 0;
     display: block;
     position: absolute;
@@ -841,7 +878,7 @@ Menu forms
     content: "";
     width: 49px;
     height: 49px;
-    top: 0;
+    top: 4px;
     left: 0;
     display: block;
     position: absolute;
@@ -863,6 +900,7 @@ Menu forms
     line-height: 22px;
     font-weight: normal;
     color: #5a5a5a;
+    margin: 5px 0;
 }
 
 .newpost > a {
@@ -892,30 +930,37 @@ Menu forms
 
 .newsletter-bg {
     background-color: #f8f7f4;
-    padding: 20px 18px;
-    margin: 5px;
+    padding: 13px 23px;
     color: #5a5a5a;
     border-radius: 20px;
+    margin: 5px;
 }
 
-.newsletter-bg > p {
-    margin: 10px 0 18px 0;
+.newsletter-form {
+    padding: 0px 0px 20px 0px;
 }
 
-.newsletter input {
-    width: 200px;
+.newsletter-form input {
     display: inline-block;
     vertical-align: top;
     font-size: 16px;
+    line-height: 24px;
+    padding: 5px 15px;
 }
 
 .newsletter .info-teaser-btn {
     display: inline-block;
     vertical-align: top;
-    width: 128px;
     position: static;
     color: #fefefe;
     border: none;
+    padding: 8px 10px 10px 15px;
+}
+
+.newsletter-form input:hover,
+.newsletter-form input:active,
+.newsletter-form input:focus {
+    padding: 4px 12px 4px 12px;
 }
 
 .map {
@@ -928,7 +973,7 @@ Menu forms
 .map-info {
     background-color: #fdfefe;
     border-radius: 10px;
-    min-height: 300px;
+    min-height: 275px;
     padding-left: 25px;
     padding-top: 30px;
     position: absolute;
@@ -941,7 +986,8 @@ Menu forms
 .map-info p {
     font-size: 14px;
     line-height: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 22px;
+    margin-top: 0px;
 }
 
 .map-info b {
@@ -956,8 +1002,9 @@ Menu forms
     font-size: 18px;
     font-weight: 700;
     line-height: 24px;
-    min-height: 44px;
-    padding: 15px 24px 15px 32px;
+    padding: 10px 30px;
+    display: inline-block;
+    margin-top: 5px;
 }
 
 /*
@@ -1064,14 +1111,15 @@ feedback
 
 
 /*footer*/
-.main-footer {
-    padding-top: 35px;
-    padding-bottom: 25px;
+.main-footer section {
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
+
 .main-footer-social {
     float: left;
-    width: 193;
-    margin-right: 50px;
+    margin-right: 70px;
+    padding-top: 5px;
 }
 
 .social-btn {
@@ -1154,7 +1202,7 @@ feedback
 .main-footer-about {
     float: left;
     width: 140px;
-    margin-right: 30px;
+    margin-right: 24px;
 }
 
 .main-footer-about > a,
@@ -1201,18 +1249,22 @@ feedback
 .main-footer-documents {
     float: left;
     width: 170px;
-    margin-right: 45px;
+    margin-right: 0px;
 }
 
-.main-footer-copyright {
+section.main-footer-copyright {
     float: left;
-    width: 230px;
+    font-size: 11px;
+    padding-left: 80px;
+    margin-top: 14px;
+    margin-bottom: 24px;
 }
 
 /*catalog page*/
 .breadcrumb {
     float: left;
     padding: 0;
+    margin: 20px 0px 0px 6px;
 }
 
 .breadcrumb li {
