Bugfix: additional rule 19

--- a/css/style.css
+++ b/css/style.css
@@ -1165,6 +1165,7 @@ Menu forms
     display: inline-block;
 
     margin-top: 5px;
+    margin-bottom: 5px;
     padding: 10px 30px;
 
     vertical-align: top;
